create basic landing html layout

--- a/index.html
+++ b/index.html
@@ -13,6 +13,85 @@
     <!-- Font Link - Ends-->
 </head>
 <body>
-    
+    <!-- Navbar - Starts-->
+    <header>
+        <div class="brand"><a href="#">Brand</a></div>
+        <nav>
+            <ul class="nav-links">
+                <li class="links"><a href="#">Courses</a></li>
+                <li class="links"><a href="#">About</a></li>
+                <li class="links"><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!-- Navbar - Ends-->
+
+    <!-- Hero IMG - Starts-->
+    <div class="hero">
+        <h1 class="hero-header">Hero Header</h1>
+        <p class="hero-text">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+            Est nobis illo nam recusandae provident labore accusantium 
+            suscipit saepe numquam animi.
+        </p>
+        <input class="button" type="button" value="Read More">
+    </div>
+    <!-- Hero IMG - Ends-->
+
+    <!-- Information Cards - Starts-->
+    <div class="course-cards">
+        <h2>Course Informations</h2>
+        <div class="info-cards">
+            <div class="card">
+                <img src="" alt="">
+                <h3>Card 1</h3>
+                <p>Lorem ipsum dolor sit amet.</p>
+                <input type="button" value="Read More">
+            </div>
+            <div class="card">
+                <img src="" alt="">
+                <h3>Card 2</h3>
+                <p>Lorem ipsum dolor sit amet.</p>
+                <input type="button" value="Read More">
+            </div>
+            <div class="card">
+                <img src="" alt="">
+                <h3>Card 3</h3>
+                <p>Lorem ipsum dolor sit amet.</p>
+                <input type="button" value="Read More">
+            </div>
+        </div>
+    </div>
+    <!-- Information Cards - Ends-->
+
+    <!-- Quote Section - Starts -->
+    <div class="quote">
+        <p class="quote-text">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam 
+            dolores vero alias tempora corporis distinctio dolore. Voluptate 
+            dolores assumenda eum!
+        </p>
+        <p class="author-name">Author name</p>
+    </div>
+    <!-- Quote Section - Ends -->
+
+    <!-- Call to Action - Starts -->
+    <div class="action">
+        <div class="action-text">
+            <h3>Lorem, ipsum dolor.</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+        </div>
+        <div><input type="button" value="Sign Up"></div>
+    </div>
+    <!-- Call to Action - Ends -->
+
+    <!-- Footer - Starts-->
+    <footer>
+        <div class="footer">
+            <p>Copyright text</p>
+        </div>
+    </footer>
+    <!-- Footer - Starts-->
+
 </body>
 </html>
