add styling to the header

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             Est nobis illo nam recusandae provident labore accusantium 
             suscipit saepe numquam animi.
         </p>
-        <a href="#">Read More</a>
+        <a class="button" href="#">Read More</a>
     </div>
     <!-- Hero IMG - Ends-->
 
@@ -46,19 +46,19 @@
                 <img src="" alt="">
                 <h3>Card 1</h3>
                 <p>Lorem ipsum dolor sit amet.</p>
-                <a href="#">Read More</a>
+                <a class="button" href="#">Read More</a>
             </div>
             <div class="card">
                 <img src="" alt="">
                 <h3>Card 2</h3>
                 <p>Lorem ipsum dolor sit amet.</p>
-                <a href="#">Read More</a>
+                <a class="button" href="#">Read More</a>
             </div>
             <div class="card">
                 <img src="" alt="">
                 <h3>Card 3</h3>
                 <p>Lorem ipsum dolor sit amet.</p>
-                <a href="#">Read More</a>
+                <a class="button" href="#">Read More</a>
             </div>
         </div>
     </div>
@@ -81,7 +81,7 @@
             <h3>Lorem, ipsum dolor.</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
         </div>
-        <div><a href="#">Read More</a></div>
+        <div><a class="button" href="#">Read More</a></div>
     </div>
     <!-- Call to Action - Ends -->
 
