add hero image and style hero section

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 <body>
     <!-- Navbar - Starts-->
     <header>
-        <div class="brand"><a href="#">Brand</a></div>
+        <div class="brand"><a href="#">YOGIMODO</a></div>
         <nav>
             <ul class="nav-links">
-                <li class="links"><a href="#">Courses</a></li>
-                <li class="links"><a href="#">About</a></li>
-                <li class="links"><a href="#">Contact</a></li>
+                <li class="links"><a href="#">COURSES</a></li>
+                <li class="links"><a href="#">ABOUT</a></li>
+                <li class="links"><a href="#">CONTACT</a></li>
             </ul>
         </nav>
     </header>
@@ -28,13 +28,15 @@
 
     <!-- Hero IMG - Starts-->
     <div class="hero">
-        <h1 class="hero-header">Hero Header</h1>
-        <p class="hero-text">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-            Est nobis illo nam recusandae provident labore accusantium 
-            suscipit saepe numquam animi.
-        </p>
-        <a class="button" href="#">Read More</a>
+        <div class="hero-content">
+            <h1 class="hero-header">The way of Yogimodo</h1>
+            <p class="hero-text">
+                Yogimodo will be the guide you have been looking 
+                for your incredible journey. It was never that easy 
+                to follow a path and become a master of your own body and soul.
+            </p>
+            <a class="button" href="#">Read More</a>
+        </div>
     </div>
     <!-- Hero IMG - Ends-->
 
