add styling to cards & quote sections

--- a/index.html
+++ b/index.html
@@ -45,22 +45,28 @@
         <h2>Course Informations</h2>
         <div class="info-cards">
             <div class="card">
-                <img src="" alt="">
+                <img class="card-img" src="https://images.pexels.com/photos/35987/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
                 <h3>Card 1</h3>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <a class="button" href="#">Read More</a>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, tenetur!</p>
+                <a class="button-gray" href="#">Read More</a>
             </div>
             <div class="card">
-                <img src="" alt="">
+                <img class="card-img" src="https://images.pexels.com/photos/8436769/pexels-photo-8436769.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
                 <h3>Card 2</h3>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <a class="button" href="#">Read More</a>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, impedit!</p>
+                <a class="button-gray" href="#">Read More</a>
             </div>
             <div class="card">
-                <img src="" alt="">
+                <img class="card-img" src="https://images.pexels.com/photos/8436398/pexels-photo-8436398.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
                 <h3>Card 3</h3>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <a class="button" href="#">Read More</a>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque, id.</p>
+                <a class="button-gray" href="#">Read More</a>
+            </div>
+            <div class="card">
+                <img class="card-img" src="https://images.pexels.com/photos/8436463/pexels-photo-8436463.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <h3>Card 4</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, quibusdam.</p>
+                <a class="button-gray" href="#">Read More</a>
             </div>
         </div>
     </div>
@@ -68,12 +74,16 @@
 
     <!-- Quote Section - Starts -->
     <div class="quote">
-        <p class="quote-text">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam 
-            dolores vero alias tempora corporis distinctio dolore. Voluptate 
-            dolores assumenda eum!
-        </p>
-        <p class="author-name">Author name</p>
+        <div class="quote-flex">
+            <p class="quote-text">
+                <em>"Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                    Ab, error alias? Maiores, excepturi voluptatum ipsam a quisquam 
+                    ad est repellendus praesentium. Animi 
+                    sed soluta maiores dolores accusantium perferendis illum nisi!"</em>
+            </p>
+            <p class="author-name">- John Doe, Instructor</p>
+        </div>
+
     </div>
     <!-- Quote Section - Ends -->
 
@@ -83,7 +93,7 @@
             <h3>Lorem, ipsum dolor.</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
         </div>
-        <div><a class="button" href="#">Read More</a></div>
+        <div><a class="button-gray" href="#">Read More</a></div>
     </div>
     <!-- Call to Action - Ends -->
 
