style the call to action section

--- a/index.html
+++ b/index.html
@@ -88,12 +88,14 @@
     <!-- Quote Section - Ends -->
 
     <!-- Call to Action - Starts -->
-    <div class="action">
-        <div class="action-text">
-            <h3>Lorem, ipsum dolor.</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+    <div class="action-flex">
+        <div class="action">
+            <div class="action-text">
+                <h3>It is time to Sign up!</h3>
+                <p>Sign up now get 25% discount. Don't miss the October classes.</p>
+            </div>
+            <div><a class="button" href="#">Read More</a></div>
         </div>
-        <div><a class="button-gray" href="#">Read More</a></div>
     </div>
     <!-- Call to Action - Ends -->
 
