style the footer section

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <!-- Footer - Starts-->
     <footer>
         <div class="footer">
-            <p>Copyright text</p>
+            <p>Copyright 	&#169; Ozan Ayyıldız</p>
         </div>
     </footer>
     <!-- Footer - Starts-->
