fix the call to action button typo

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <h3>It is time to Sign up!</h3>
                 <p>Sign up now get 25% discount. Don't miss the October classes.</p>
             </div>
-            <div><a class="button" href="#">Read More</a></div>
+            <div><a class="button" href="#">Sign Up</a></div>
         </div>
     </div>
     <!-- Call to Action - Ends -->
